--- a/templates/css/commons.css
+++ b/templates/css/commons.css
@@ -365,7 +365,7 @@
     background-image: url("./image/search.png");
     background-size: auto 75%;
     background-repeat: no-repeat;
-    background-position: left 5px center;
+    background-position: right 5px center;
     padding-left: 2.5em;
 }
 
