디자인모듈 진행중

--- a/templates/css/commons.css
+++ b/templates/css/commons.css
@@ -279,20 +279,26 @@
     border-radius: 50px;
 }
 .form-btn.large {
-    font-size: 20px;
-    padding: 0.8em;
-    border-width: 2.5px;
+    font-size: 18px;
+    padding: 1em;
+    padding-left: 2em;
+    padding-right: 2em;
+    border-width: 2px;
     border-style: solid;
 }
 .form-btn.medium {
-    font-size: 16px;
-    padding: 0.75em;
+    font-size: 15px;
+    padding: 1em;
+    padding-left: 2em;
+    padding-right: 2em;
     border-width: 2px;
     border-style: solid;
 }
 .form-btn.small {
     font-size: 13px;
-    padding: 0.5em;
+    padding: 0.75em;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
     border-width: 2px;
     border-style: solid;
 }
@@ -310,20 +316,20 @@
 /*
     입력창 디자인(form-input)
     - 입력창은 small, medium, large 사이즈로 분류되어 있습니다.
-    - 양 끝이 완전히 둥근 round와 모서리만 깎은 semi-round가 있습니다.
-    - 테두리 색이 진한 deep과 흐린 light가 있습니다(light는 hover시 컬러가 변경됩니다).
+    - 디폴트로 양 끝이 완전히 둥근 모양이고, 모서리만 깎은 semi-round가 있습니다.
+    - 디폴트로 테두리 색이 진하고, 흐린 light가 있습니다(light는 hover시 컬러가 변경됩니다).
 */
 .form-input {
     outline: none;
-}
-.form-input.round {
     border-radius: 50px;
+    padding-left: 1.3em;
+    padding-right: 1.3em;
+    border-color: #776BFF;
 }
 .form-input.semi-round {
     border-radius: 10px;
-}
-.form-input.deep {
-    border-color: #776BFF;
+    padding-left: 0.75em;
+    padding-right: 0.75em;
 }
 .form-input.light {
     border-color: #e4e1ff;
@@ -332,20 +338,23 @@
     border-color: #776BFF;
 }
 .form-input.large {
-    font-size: 20px;
-    padding: 0.8em;
-    border-width: 2.5px;
+    font-size: 18px;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    border-width: 2px;
     border-style: solid;
 }
 .form-input.medium {
-    font-size: 16px;
-    padding: 0.75em;
+    font-size: 15px;
+    padding-top: 1em;
+    padding-bottom: 1em;
     border-width: 2px;
     border-style: solid;
 }
 .form-input.small {
     font-size: 13px;
-    padding: 0.5em;
+    padding-top: 0.75em;
+    padding-bottom: 0.75em;
     border-width: 2px;
     border-style: solid;
 }
@@ -358,15 +367,17 @@
     outline: none;
     border-color: #776BFF;
     border-radius: 50px;
-    font-size: 20px;
-    padding: 0.8em;
-    border-width: 2.5px;
+    border-width: 2px;
     border-style: solid;
-    background-image: url("./image/search.png");
-    background-size: auto 75%;
+    font-size: 18px;
+    padding: 1em;
+    padding-left: 1.7em;
+    padding-right: 3em;
+
+    background-image: url("../image/search.png");
+    background-size: auto 50%;
     background-repeat: no-repeat;
-    background-position: right 5px center;
-    padding-left: 2.5em;
+    background-position: right 17px center;
 }
 
 /*
