--- a/templates/test.html
+++ b/templates/test.html
@@ -13,7 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <title>Document</title>
 </head>
-<body>
+<body test>
     <h1>positive btns</h1>
     <button class="form-btn large positive">large</button>
     <button class="form-btn medium positive">medium</button>
@@ -43,6 +43,23 @@
     <h1 class="font-purple">타이틀</h1>
     <div class="font-purple">본문</div>
     <hr>
-    <input type="text" class="form-input-search">
+    <div class="container-500 mb-40">
+        <input type="text" class="form-input-search w-100">
+    </div>
+    <div class="container-500 mb-40">
+        <input type="text" class="form-input-search small w-100">
+    </div>
+    <div class="container-800 mb-40">
+        <div class="row">
+            <select class="form-input round deep large">
+                <option>11111</option>
+                <option>2</option>
+                <option>3</option>
+            </select>
+            <input type="text" class="form-input-search w-50">
+            <button class="form-btn large positive w-20">입력</button>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
