사이드메뉴, 푸터 수정

--- a/templates/css/layout.css
+++ b/templates/css/layout.css
@@ -1,17 +1,31 @@
 @charset "UTF-8";
 
+html {
+    height: 100%;
+    }
+
+body {
+    height: 100%;
+}
+
 header {
     background-color: white;
     position: sticky;
     top: 0;
     padding-top: 10px;
     padding-bottom: 10px;
+    height: 98px;
 }
 
-footer {
+footer{
+    height: 200px;
+    position : relative;
     background-color: #f8f8ff;
     padding-top: 10px;
+    /* bottom: 0;
     padding-bottom: 10px;
+    width: 100%;
+    transform: translatY(-100%); */
 }
 
 aside {
@@ -19,9 +33,16 @@ aside {
     top: 95.5px;
     left: 0;
     bottom: 0;
-    width: 600px;
-    z-index: 999;
+    width: 100%;
+    z-index: 9999;
     background-color: #ffffff;
+}
+
+#wrapper{
+    height: auto;
+    min-height: 100vh;
+    /* padding-bottom: 200px;
+    position: relative; */
 }
 
 /*
