--- a/templates/layout.html
+++ b/templates/layout.html
@@ -67,6 +67,7 @@
 </head>
 <body>
     <main>
+        <div id="wrapper">
         <header style="border-bottom: 0.5px solid #72706f;">
             <div class="container-1000">
                 <div class="flex">
@@ -96,9 +97,9 @@
             </div>
         </header>
         <aside class="side-menu">
-            <div class="container-600 flex">
-                <div class="w-45"></div>
-                <div class="row w-50">
+            <div class="container-1000 flex">
+                <div class=""></div>
+                <div class="row w-30">
                     <a class="link" href="#">
                         <div class="row large flex menu-item">
                             <div class="w-85">
@@ -170,7 +171,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="w-5"></div>
+                <div class="w-70"></div>
             </div>
             
         </aside>
@@ -179,12 +180,13 @@
             <!---------------------------------------------------->
 
             <!----------------------메인컨텐츠---------------------->
-
-        </section>
+            <div class="container-1000">
+                Elit pellentesque habitant morbi tristique senectus et netus et malesuada. Iaculis eu non diam phasellus vestibulum. Sed adipiscing diam donec adipiscing tristique risus nec feugiat in. Auctor eu augue ut lectus arcu bibendum. Vel quam elementum pulvinar etiam non quam. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Fringilla ut morbi tincidunt augue interdum velit. Cursus in hac habitasse platea dictumst. Pharetra vel turpis nunc eget lorem dolor. Quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Nunc sed velit dignissim sodales ut. Tortor at auctor urna nunc id cursus metus. Faucibus turpis in eu mi. Diam in arcu cursus euismod quis viverra.
 
             <!---------------------------------------------------->
             </article>
         </section>
+    </div>
         <footer>
             <div class="container-1000">
                 <div class="row flex">
