--- a/templates/css/layout.css
+++ b/templates/css/layout.css
@@ -14,7 +14,7 @@ header {
     top: 0;
     padding-top: 10px;
     padding-bottom: 10px;
-    height: 98px;
+    height: 95px;
 }
 
 footer{
@@ -26,6 +26,11 @@ footer{
     padding-bottom: 10px;
     width: 100%;
     transform: translatY(-100%); */
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-family: inherit;
+    vertical-align: baseline;
 }
 
 aside {
