레이이아웃 css (230323)

--- a/semiproject/src/main/resources/static/css/layout.css
+++ b/semiproject/src/main/resources/static/css/layout.css
@@ -2,7 +2,7 @@
 
 html {
     height: 100%;
-    }
+}
 
 body {
     height: 100%;
@@ -55,6 +55,7 @@ aside {
 */
 .flex {
     display: flex;
+    align-items: center;
 }
 .flex.center {
     justify-content: center;
