--- a/semiproject/src/main/resources/static/css/reset.css
+++ b/semiproject/src/main/resources/static/css/reset.css
@@ -35,6 +35,16 @@ tfoot, thead, tr, th, td, article, aside, footer,
 header, menu, nav, section {
     color: #22201e;
 }
+html {
+	font-size: 16px;
+}
+/* 글자 크기 */
+h1 { font-size: 2em; }
+h2 { font-size: 1.5em; }
+h3 { font-size: 1.17em; }
+h4 { font-size: 1em; }
+h5 { font-size: 0.83em; }
+h6 { font-size: 0.67em; }
 hr {
     background:#72706f;
     height:1px;
