--- a/semiproject/src/main/resources/static/css/commons.css
+++ b/semiproject/src/main/resources/static/css/commons.css
@@ -8,6 +8,23 @@
 */
 
 /*
+    컬러팔렛트
+    - 보라색
+        - 100%: #776bff
+        - 20%: #e4e1ff
+        - 5%: #f8f8ff
+
+    - 검은색
+        - 100%: #22201e
+        - 80%: #4e4d4b
+        - 40%: #72706f
+        - 3%: #f8f8f8
+
+    - 빨간색
+        - 100%: #FF4848
+*/
+
+/*
     container 설정
 */
 .container-100 {
@@ -142,6 +159,7 @@
     .ps: padding-start(left)
     .pe: padding-end(right)
 */
+.mv-5 {margin: 5px 0;}
 .mv-10 {margin: 10px 0;}
 .mv-20 {margin: 20px 0;}
 .mv-30 {margin: 30px 0;}
@@ -153,6 +171,7 @@
 .mv-90 {margin: 90px 0;}
 .mv-100 {margin: 100px 0;}
 
+.mt-5 {margin-top: 5px;}
 .mt-10 {margin-top: 10px;}
 .mt-15 {margin-top: 15px;}
 .mt-20 {margin-top: 20px;}
@@ -166,6 +185,7 @@
 .mt-90 {margin-top: 90px;}
 .mt-100 {margin-top: 100px;}
 
+.mb-5 {margin-bottom: 5px;}
 .mb-10 {margin-bottom: 10px;}
 .mb-20 {margin-bottom: 20px;}
 .mb-30 {margin-bottom: 30px;}
@@ -177,7 +197,9 @@
 .mb-90 {margin-bottom: 90px;}
 .mb-100 {margin-bottom: 100px;}
 
+.ms-5 {margin-left: 5px;}
 .ms-10 {margin-left: 10px;}
+.ms-15 {margin-left: 15px;}
 .ms-20 {margin-left: 20px;}
 .ms-30 {margin-left: 30px;}
 .ms-40 {margin-left: 40px;}
@@ -190,6 +212,7 @@
 
 .me-5 {margin-right: 5px;}
 .me-10 {margin-right: 10px;}
+.me-15 {margin-right: 15px;}
 .me-20 {margin-right: 20px;}
 .me-30 {margin-right: 30px;}
 .me-40 {margin-right: 40px;}
@@ -200,6 +223,7 @@
 .me-90 {margin-right: 90px;}
 .me-100 {margin-right: 100px;}
 
+.p-5 {padding: 5px;}
 .p-10 {padding: 10px;}
 .p-20 {padding: 20px;}
 .p-30 {padding: 30px;}
@@ -211,6 +235,7 @@
 .p-90 {padding: 90px;}
 .p-100 {padding: 100px;}
 
+.pt-5 {padding-top: 5px;}
 .pt-10 {padding-top: 10px;}
 .pt-20 {padding-top: 20px;}
 .pt-30 {padding-top: 30px;}
@@ -222,6 +247,7 @@
 .pt-90 {padding-top: 90px;}
 .pt-100 {padding-top: 100px;}
 
+.pb-5 {padding-bottom: 5px;}
 .pb-10 {padding-bottom: 10px;}
 .pb-20 {padding-bottom: 20px;}
 .pb-30 {padding-bottom: 30px;}
@@ -233,6 +259,7 @@
 .pb-90 {padding-bottom: 90px;}
 .pb-100 {padding-bottom: 100px;}
 
+.ps-5 {padding-left: 5px;}
 .ps-10 {padding-left: 10px;}
 .ps-20 {padding-left: 20px;}
 .ps-30 {padding-left: 30px;}
@@ -261,6 +288,12 @@
 */
 .row {
     margin: 10px 0px;
+}
+.row-large {
+    margin-bottom: 65px;
+}
+.row-medium {
+    margin-bottom: 16px;
 }
 
 /*
@@ -318,11 +351,55 @@
 /*
     a태그 디자인
 */
-.link {
+a.link {
     color: #22201E;
     text-decoration: none;
     cursor: pointer;
 }
+a.link:hover {
+    color: #776BFF;
+}
+a.form-btn {
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bolder;
+}
+a.form-btn.large {
+    font-size: 18px;
+    padding: 1em;
+    padding-left: 2em;
+    padding-right: 2em;
+    border-width: 2px;
+    border-style: solid;
+}
+a.form-btn.medium {
+    font-size: 15px;
+    padding: 1em;
+    padding-left: 2em;
+    padding-right: 2em;
+    border-width: 2px;
+    border-style: solid;
+}
+a.form-btn.small {
+    font-size: 13px;
+    padding: 0.75em;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+    border-width: 2px;
+    border-style: solid;
+}
+a.form-btn.positive {
+    background-color: #776BFF;
+    border-color: #776BFF;
+    color: white;
+}
+a.form-btn.neutral {
+    background-color: white;
+    border-color: #776BFF;
+    color: #776BFF;
+}
+
 
 /*
     입력창 디자인(form-input)
@@ -372,32 +449,263 @@
 
 /*
     검색창(form-input-search)
-    - 검색창은 헤더에 사용하는 일반 검색창과, QnA페이지에 있는 작은 검색창(small)로 나뉩니다.
+    - 검색창은 부모 div(search-box), 자식 input(search-input)/button(search-btn)으로 만듭니다.
+    - html 코드 예시
+        <div class="row">
+            <div class="search-box">
+                <input class="search-input w-100">
+                <button class="search-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </div>
+        </div>
 */
-.form-input-search {
+.search-box {
+    border: 2px solid #776bff;
+    border-radius: 100px;
+    display: flex;
+}
+.search-input {
+    color: #22201e;
+    font-size: 20px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 25px;
+    border: none;
     outline: none;
-    border-color: #776BFF;
-    border-radius: 50px;
-    border-width: 2px;
-    border-style: solid;
-    font-size: 18px;
-    padding: 0.75em;
-    padding-left: 1.7em;
-    padding-right: 3em;
-
-    background-image: url("../image/search.png");
-    background-size: auto 50%;
-    background-repeat: no-repeat;
-    background-position: right 17px center;
+    background: none;
+}
+.search-btn {
+    font-size: 23px;
+    color: #776bff;
+    width: 50px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    text-align: left;
 }
 
 /*
-    글자 스타일
-    - font-purple: 글자 색을 메인 보라색으로 변경합니다.
+    체크박스 디자인
 */
-.font-purple {
+input[type="checkbox"] {
+    width: 1.3rem;
+    height: 1.3rem;
+    border-radius: 50%;
+    border: 2px solid #776bff;
+    appearance: none;
+    cursor: pointer;
+  }
+
+  input[type="checkbox"]:checked {
+    background: #776bff;
+    border: 2px solid #776bff;
+  }
+
+/*
+    글자 스타일
+*/
+/* 글자색 */
+.c-p100 {
     color: #776BFF;
 }
+.c-p20 {
+    color: #e4e1ff;
+}
+.c-p5 {
+    color: #f8f8ff;
+}
+.c-b100 {
+    color: #22201e;
+}
+.c-b80 {
+    color: #4e4d4b;
+}
+.c-b40 {
+    color: #72706f;
+}
+.c-b3 {
+    color: #f8f8f8;
+}
+.c-r3 {
+    color: #FF4848;
+}
+
+/* 글자 크기 */
+.font-h1 {
+    font-size: 2em;
+}
 .font-h2 {
-    font-size: 24px;
+    font-size: 1.5em;
+}
+.font-h3 {
+    font-size: 1.17em;
+}
+.font-h4 {
+    font-size: 1em;
+}
+.font-h5 {
+    font-size: 0.83em;
+}
+.font-h6 {
+    font-size: 0.67em;
+}
+
+/*
+    표
+    - QnA 게시판에서 쓰이는 표
+        - 메인클래스 table을 붙이고 그 뒤에 서브클래스 table-qna를 지정해주시면 됩니다.
+    - 장바구니에서 쓰이는 표
+        - 메인클래스 table을 붙이고 그 뒤에 서브클래스 table-cart를 지정해주시면 됩니다.
+*/
+.table > thead > tr > th,
+.table > thead > tr > td,
+.table > tbody > tr > th,
+.table > tbody > tr > td,
+.table > tfoot > tr > th,
+.table > tfoot > tr > td {
+    padding: 0.5em;
+}
+.table.table-qna > thead {
+    border-bottom: 1.5px solid #4e4d4b;
+}
+.table.table-qna > tfoot {
+    border-bottom: 1.5px solid #4e4d4b;
+    border-top: 1.5px solid #4e4d4b;
+}
+.table.table-qna > tbody > tr {
+    border-bottom: 1px solid #72706f;
+}
+.table.table-cart > tbody > tr > th {
+    padding: 1em;
+}
+.table.table-cart > tbody > tr > td {
+    padding: 1.5em;
+}
+.table.table-cart > tbody > tr {
+    border-top: 1.5px solid #72706f;
+    border-bottom: 1.5px solid #72706f;
+}
+
+/*
+    페이지네이션
+    - 페이지네이션이 들어갈 div의 클래스에 pagenation만 붙이면 아래 설정들이 다 따라옵니다.
+    - html 코드 예시
+        <div class="row">
+            <div class="pagination">
+                <a href="#">&laquo;</a>
+                <a href="#">&lt;</a>
+                <a href="#">1</a>
+                <a href="#">2</a>
+                <a href="#">3</a>
+                <a href="#" class="on">4</a>
+                <a href="#">5</a>
+                <a href="#">6</a>
+                <a href="#">7</a>
+                <a href="#">8</a>
+                <a href="#">9</a>
+                <a href="#">10</a>
+                <a href="#">&gt;</a>
+                <a href="#">&raquo;</a>
+            </div>
+        </div>
+*/
+.pagenation {
+    text-align: center;
+}
+.pagination > a {
+    display: inline-block;
+    color: #4e4d4b;
+    text-decoration: none;
+    font-size: 16px;
+    min-width: 2.25em;
+    height: 2.25em;
+    padding: 0.4em;
+    text-align: center;
+    border-radius: 100px;
+}
+.pagination > a.on {
+    box-shadow: 0px 0px 0px 1px #776bff;
+    color: #4e4d4b;
+}
+.pagination > a:hover:not(.disabled) {
+    background-color: #f8f8ff;
+}
+.pagination > a.disabled {
+    background-color: #f8f8f8;
+    color: #72706f;
+    cursor: default;
+}
+
+/*
+    qty-stepper
+    - 상품 수량조절하는 카운트네비게이션입니다.
+    - 사이즈는 추후 페이지 디자인 시 변경되어야 할 수 있습니다.
+    - html 코드 작성 예시
+        <div class="flex qty-stepper center">
+            <span class="minus">-</span>
+            <span class="number">1</span>
+            <span class="plus">+</span>
+        </div>
+*/
+.qty-stepper {
+    width: 100px;
+    border-radius: 100px;
+    border: 2px solid #776bff;
+    padding-top: 0.25em;
+    padding-bottom: 0.25em;
+    flex-grow: 1;
+    font-size: 16px;
+}
+.qty-stepper > .number {
+    width: 40px;
+    cursor: default;
+}
+.qty-stepper > .minus,
+.qty-stepper > .plus {
+    width: 24px;
+    border-radius: 100px;
+    cursor: pointer;
+}
+.qty-stepper > .minus.disabled,
+.qty-stepper > .plus.disabled {
+    border-radius: 100px;
+    color: #72706f;
+    background-color: #f8f8f8;
+    cursor: default;
+}
+.qty-stepper > .minus:hover:not(.disabled),
+.qty-stepper > .plus:hover:not(.disabled) {
+    background-color: #f8f8ff;
+    cursor: pointer;
+}
+
+.qty-stepper-small {
+    width: 90px;
+    border-radius: 100px;
+    border: 2px solid #776bff;
+    padding-top: 0.25em;
+    padding-bottom: 0.25em;
+    flex-grow: 1;
+    font-size: 13px;
+}
+.qty-stepper-small > .number {
+    width: 37px;
+    cursor: default;
+}
+.qty-stepper-small > .minus,
+.qty-stepper-small > .plus {
+    width: 21.5px;
+    border-radius: 100px;
+    cursor: pointer;
+}
+.qty-stepper-small > .minus.disabled,
+.qty-stepper-small > .plus.disabled {
+    border-radius: 100px;
+    color: #72706f;
+    background-color: #f8f8f8;
+    cursor: default;
+}
+.qty-stepper-small > .minus:hover:not(.disabled),
+.qty-stepper-small > .plus:hover:not(.disabled) {
+    background-color: #f8f8ff;
+    cursor: pointer;
 }
