--- a/semiproject/src/main/resources/static/css/reset.css
+++ b/semiproject/src/main/resources/static/css/reset.css
@@ -4,11 +4,10 @@
     http://meyerweb.com/eric/tools/css/reset/ 
     v2.0 | 20110126
     License: none (public domain)
-
     수정: 진서영
     날짜: 2023-03-17
 */
-html, body, div, span, applet, object, iframe,
+/* span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -19,7 +18,8 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+time, mark, audio, video, */
+html, body, div {
     margin: 0;
     padding: 0;
     border: 0;
@@ -27,6 +27,27 @@ time, mark, audio, video {
     font: inherit; */
     font-family: inherit;
     vertical-align: baseline;
+}
+html, body, div, span, h1, h2, h3, h4, h5, h6, p,
+a, ol, ul, li, form, label, table, caption, tbody, 
+tfoot, thead, tr, th, td, article, aside, footer, 
+header, menu, nav, section {
+    color: #22201e;
+}
+html {
+	font-size: 16px;
+}
+/* 글자 크기 */
+h1 { font-size: 2em; }
+h2 { font-size: 1.5em; }
+h3 { font-size: 1.17em; }
+h4 { font-size: 1em; }
+h5 { font-size: 0.83em; }
+h6 { font-size: 0.67em; }
+hr {
+    background:#72706f;
+    height:1px;
+    border:0;
 }
 /* (div) HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -40,6 +61,7 @@ ol, ul {
     list-style: none;
 }
 table {
+    width: 100%;
     border-collapse: collapse;
     border-spacing: 0;
 }
