--- a/templates/test.html
+++ b/templates/test.html
@@ -17,11 +17,23 @@
 
     </style>
 </head>
-<body>
+<body test>
+    <div class="container-500">
+        <div class="flex w-100">
+            <div class="w-50">
+                <button>첨부파일</button>
+            </div>
+            <div class="flex w-50 right">
+                <button>취소</button>
+                <button>등록</button>
+            </div>
+        </div>
+    </div>
+
     <div class="row">
-        <div class="parent">
-            <input class="search w-100">
-            <button class="btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+        <div class="search-box">
+            <input class="search-input w-100">
+            <button class="search-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
     </div>
     <div class="row">
