--- a/semiproject/src/main/resources/static/css/commons.css
+++ b/semiproject/src/main/resources/static/css/commons.css
@@ -401,3 +401,48 @@
 .font-h2 {
     font-size: 24px;
 }
+
+
+/*
+    qty-stepper
+    - 상품 수량조절하는 카운트네비게이션입니다.
+    - 사이즈는 추후 페이지 디자인 시 변경되어야 할 수 있습니다.
+    - html 코드 작성 예시
+        <div class="flex qty-stepper center">
+            <span class="minus">-</span>
+            <span class="number">1</span>
+            <span class="plus">+</span>
+        </div>
+*/
+.qty-stepper {
+    width: 100px;
+    border-radius: 100px;
+    border: 2px solid #776bff;
+    padding-top: 0.25em;
+    padding-bottom: 0.25em;
+    flex-grow: 1;
+    font-size: 16px;
+}
+.qty-stepper > .number {
+    width: 40px;
+    cursor: default;
+}
+.qty-stepper > .minus,
+.qty-stepper > .plus {
+    width: 24px;
+    border-radius: 100px;
+    cursor: pointer;
+}
+.qty-stepper > .minus.disabled,
+.qty-stepper > .plus.disabled {
+    width: 24px;
+    border-radius: 100px;
+    color: #72706f;
+    background-color: #f8f8f8;
+    cursor: default;
+}
+.qty-stepper > .minus:hover:not(.disabled),
+.qty-stepper > .plus:hover:not(.disabled) {
+    background-color: #f8f8ff;
+    cursor: default;
+}
