230324(금) 로그인구현 완료, 회원가입 비동기처리완료

--- a/semiproject/src/main/resources/static/css/commons.css
+++ b/semiproject/src/main/resources/static/css/commons.css
@@ -401,3 +401,41 @@
 .font-h2 {
     font-size: 24px;
 }
+.valid-message {
+  color: #776bff;
+  display: none;
+}
+.invalid-message,
+.invalid-message2,
+.invalid-message3 {
+  color: red;
+  display: none;
+}
+/* 
+  입력창이 성공상태(.valid)일 경우 
+  뒤에 있는 성공메세지(.valid-message)를 표시 
+*/
+.valid ~ .valid-message {
+  display: block;
+}
+/* 
+  입력창이 실패상태(.invalid)일 경우 
+  뒤에 있는 실패메세지(.invalid-message)를 표시 
+*/
+.invalid ~ .invalid-message {
+  display: block;
+}
+.invalid2 ~ .invalid-message2 {
+  display: block;
+}
+.invalid3 ~ .invalid-message3 {
+  display: block;
+}
+
+.valid {
+  border-color: #776bff;;
+}
+
+.invalid, .invalid2, .invalid3 {
+  border-color: red;
+}
